--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
  
 </head>
 <body>
+
+ <!-- -----------Top banner First------------------- -->
         <section class="top-banner">
                 <div class="top-part">
                        <h1> Welcome To</h1>
@@ -23,6 +25,20 @@
                  </div>
                  <div class="top-part">
                     <img src="./images/jhankar.png" alt="">
+                </div>
+      </section>
+
+ <!----------------- Top Banner Two----------------- -->
+      <section class="top-banner2">
+                <div class="top-part1">
+                     <img src="./images/jhankar2.png" alt="">
+                </div>
+
+                <div class="top-part2">
+                    <h1> Dream Big </h1>
+                    <h3>Become a web developer</h3>
+                    <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                    <a target="_blank" class="btn-two" href="#">download resume</a>
                 </div>
       </section>
 </body>
