--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 
  <!-- -----------Top banner First------------------- -->
-        <section class="top-banner">
+        <section class="top-banner flexible-container">
                 <div class="top-part">
                        <h1> Welcome To</h1>
-                       <h1 class="orange-color"> <span>Ibrahim Naib </span>World</h1>
+                       <h1 class="orange-color"> <span> Ibrahim Naib </span> World</h1>
                     
                        <h3>Build Climber and Train Stopper</h3>
                         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero. </p>
@@ -29,7 +29,7 @@
       </section>
 
  <!----------------- Top Banner Two----------------- -->
-      <section class="top-banner2">
+      <section class="top-banner2 flexible-container">
                 <div class="top-part1">
                      <img src="./images/jhankar2.png" alt="">
                 </div>
@@ -41,5 +41,25 @@
                     <a target="_blank" class="btn-two" href="#">download resume</a>
                 </div>
       </section>
+
+  <!--------------------- Experiences section --------------------->
+      <section class="experiance-part">
+          <h1> Experiences</h1>
+                  <div class="flexible-container">
+                        <div id="side-design1"class="top-part3">
+                            <h1> Full Stack Web Developer </h1>
+                            <h3 class="another-orange-color">2022-Present | Pro Level Developer</h3>
+                            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                        </div>
+                       <div id="side-design" class="top-part3">
+                            <h1> Baby Web Developer </h1>
+                            <h3 class="another-orange-color">2021-2022 | Programming Hero Learner</h3>
+                            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                       </div>
+                  </div>
+      </section>
+      <footer>
+             <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+      </footer>
 </body>
 </html>
