added experience section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!--------------------- Experiences section --------------------->
       <section class="experiance-part">
-          <h1> Experiences</h1>
+          <h1 class="experiance-part-title"> Experiences</h1>
                   <div class="flexible-container">
                         <div id="side-design1"class="top-part3">
                             <h1> Full Stack Web Developer </h1>
